// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Component should match snapshot 1`] = `
.c0 {
  background-color: #FAFAFA;
  margin-bottom: 20px;
}

.c0:not(:last-child) {
  border-bottom: 1px solid #E0E0E0;
  padding-bottom: 20px;
}

<div
  className="c0"
/>
`;

exports[`Service Component should match snapshot with darkTheme 1`] = `
.c0 {
  background-color: #202020;
  margin-bottom: 20px;
}

.c0:not(:last-child) {
  border-bottom: 1px solid #303030;
  padding-bottom: 20px;
}

<div
  className="c0"
/>
`;

exports[`Service Component should match snapshot with lightTheme 1`] = `
.c0 {
  background-color: #FAFAFA;
  margin-bottom: 20px;
}

.c0:not(:last-child) {
  border-bottom: 1px solid #E0E0E0;
  padding-bottom: 20px;
}

<div
  className="c0"
/>
`;
